fix generated title query
