# docs/swagger.json
@@ -20,7 +20,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "jobs"
+                    "jobScraper"
                 ],
                 "summary": "Get jobs",
                 "responses": {
@@ -39,21 +39,18 @@
         "/scrape": {
             "post": {
                 "description": "Start scraping jobs based on the provided configuration",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "scrape"
+                    "jobScraper"
                 ],
                 "summary": "Start scraping",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Job Title",
-                        "name": "jobTitle",
+                        "name": "title",
                         "in": "query",
                         "required": true
                     },
